@@ -1,6 +1,6 @@
 Name:           globus-dsi-rest
 %global _name %(tr - _ <<< %{name})
-Version:	0.16
+Version:	0.17
 Release:        1%{?dist}
 Vendor:		Globus Support
 Summary:        GridFTP DSI REST Helper API
@@ -127,6 +127,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc %{_docdir}/globus-dsi-rest/html/*
 
 %changelog
+* Fri Aug 19 2016 Globus Toolkit <support@globus.org> - 0.17-1
+- Fix some logging issues
+
 * Tue Jul 26 2016 Globus Toolkit <support@globus.org> - 0.16-1
 - Add eof flag to gridftp_op_arg to pass back EOF state to requester
 - Handle read until EOF in gridftp_op handling
