@@ -1,5 +1,11 @@
 globus-dsi-rest (0.16-1+gt6.@distro@) @distro@; urgency=low
 
+  * Fix some logging issues
+
+ -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 11:26:29 -0400
+
+globus-dsi-rest (0.16-1+gt6.@distro@) @distro@; urgency=low
+
   * Add eof flag to gridftp_op_arg to pass back EOF state to requester
   * Handle read until EOF in gridftp_op handling
 
